build demo 2 reduced requirement to java 8 - goodbye enhanced switch :(